# br-portal

./: .gitignore  DATABASE_SCHEMA_DOCUMENTATION.md  INTAKE_SYSTEM_README.md  README.md  database_schema_20250905_200813.json  deploy.sh  deploy_csrf_fix.sh  fetch_db.sh  fix_django.sh  fix_vm_env.sh  inspect_database.py  manage_prod_users.sh  manual_startup.sh  pyproject.toml  requirements.txt  setup_prod_vm.sh  startup.sh  startup_uv.sh  test_intake_system.py  test_logging.py  test_ngrok.sh  upload_db.sh  upload_users.sh  view_logs.py
clarity_dx_portal/: README.md  manage.py  requirements.txt  search_pdfs.py  test_s3.py  test_specific_pdf.py
clarity_dx_portal/billing/: models.py  routers.py  s3_utils.py  urls.py  views.py  views_job_monitoring.py
clarity_dx_portal/billing/management/commands/: process_scanned_bills.py
clarity_dx_portal/billing/migrations/: 0001_add_assigned_worker_field.py
clarity_dx_portal/billing/templates/billing/: add_bill_line_item.html  base.html  bill_detail.html  bill_search.html  dashboard.html  delete_bill_line_item.html  edit_bill.html  edit_bill_line_item.html  edit_order_info.html  edit_order_line_item.html  edit_order_provider.html  edit_patient_info.html  edit_provider_info.html  filemaker_mapping_queue.html  landing.html  (+8 more)
clarity_dx_portal/clarity_dx_portal/: asgi.py  settings.py  urls.py  wsgi.py
jobs/: __init__.py  intake_scrape.py  intake_scrape_django.py  intake_scrape_django_2ndpass.py  map_bill.py  pdf_intake_split.py
jobs/config/: s3_utils.py
jobs/utils/: gpt4o_prompt_ultimate.json  job_logger.py  validate_intake.py
(+1 files in other folders)
