[project]
name = "br-portal"
version = "0.1.0"
description = "Django billing portal application"
requires-python = ">=3.8"
dependencies = [
    "Django==5.2.3",
    "pandas==2.0.3",
    "boto3==1.34.0",
    "python-dotenv==1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
