[project]
name = "br-portal"
version = "0.1.0"
description = "Django billing portal application"
requires-python = ">=3.10,<3.13"
dependencies = [
    "Django==5.2.3",
    "pandas>=2.0.3,<2.3.0",
    "boto3==1.34.0",
    "python-dotenv==1.0.0",
    "openai==1.35.0",
    "PyMuPDF==1.23.26",
    "Pillow>=10.2.0,<11.0.0",
    "PyPDF2==3.0.1",
    "numpy>=1.26.0,<2.0.0",
    "opencv-python>=4.9.0,<5.0.0",
    "pytesseract==0.3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
